--- a/Obvious_or_not/Base.lproj/Main.storyboard
+++ b/Obvious_or_not/Base.lproj/Main.storyboard
@@ -10,21 +10,56 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--polls-->
+        <scene sceneID="86A-fg-owe">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="8qS-PI-EFh" customClass="ViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jn4-gs-Cxe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="jkN-ID-K9v"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Nm5-oZ-S8l"/>
+                    <tabBarItem key="tabBarItem" title="polls" id="Z86-7Y-Ymk"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k5l-Di-kTz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-402" y="825"/>
+            <point key="canvasLocation" x="978" y="1250"/>
+        </scene>
+        <!--register-->
+        <scene sceneID="UdU-Yo-lzG">
+            <objects>
+                <viewController id="uUa-q3-gbr" customClass="RegisterController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="snl-sA-rjM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="vfI-YZ-MMD"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="register" id="xoN-IZ-l2v"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KV1-C7-kJt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976" y="586"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="67A-n6-A8R">
+            <objects>
+                <tabBarController id="AaD-32-lnP" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="zMH-p4-MGG"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8ze-qA-GZi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="uUa-q3-gbr" kind="relationship" relationship="viewControllers" id="bvi-Nk-J9u"/>
+                        <segue destination="8qS-PI-EFh" kind="relationship" relationship="viewControllers" id="HiV-Ak-ZbX"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HKt-rY-fmR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="24" y="917"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SeO-dW-qyY">
@@ -35,7 +70,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="e9x-hZ-2sG"/>
+                        <segue destination="AaD-32-lnP" kind="relationship" relationship="rootViewController" id="a4x-qF-QnQ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jWw-qd-0TC" userLabel="First Responder" sceneMemberID="firstResponder"/>
