added the logout functional.

--- a/Obvious_or_not/loggedIn/LoggedIn.storyboard
+++ b/Obvious_or_not/loggedIn/LoggedIn.storyboard
@@ -29,7 +29,7 @@
         <!--log out-->
         <scene sceneID="zvB-R0-UCl">
             <objects>
-                <viewController id="vbf-4U-xOy" customClass="LogoutController" sceneMemberID="viewController">
+                <viewController id="vbf-4U-xOy" customClass="LogoutController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q4h-NK-g3D">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
