--- a/Obvious_or_not/loggedIn/LoggedIn.storyboard
+++ b/Obvious_or_not/loggedIn/LoggedIn.storyboard
@@ -11,20 +11,37 @@
     </dependencies>
     <scenes>
         <!--polls-->
+        <scene sceneID="q70-Vd-VhF">
+            <objects>
+                <navigationController id="WCL-jf-KH7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="polls" id="sRa-u9-aTd"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZAa-LJ-JMc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tXx-TL-Pmc" kind="relationship" relationship="rootViewController" id="Lap-YR-ncp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Mo-eS-oEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975" y="1480"/>
+        </scene>
+        <!--Logged In View Controller-->
         <scene sceneID="TUe-2z-q3B">
             <objects>
-                <viewController id="tXx-TL-Pmc" customClass="ViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tXx-TL-Pmc" customClass="LoggedInViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RGk-p5-vet">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="VtJ-H2-kff"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="polls" id="BWK-Mm-gMK"/>
+                    <navigationItem key="navigationItem" id="Ir8-Jq-GF8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tB9-5S-30P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="978" y="1250"/>
+            <point key="canvasLocation" x="1868" y="1481"/>
         </scene>
         <!--log out-->
         <scene sceneID="zvB-R0-UCl">
@@ -53,7 +70,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="tXx-TL-Pmc" kind="relationship" relationship="viewControllers" id="AMn-F0-dRb"/>
+                        <segue destination="WCL-jf-KH7" kind="relationship" relationship="viewControllers" id="Nhy-26-515"/>
                         <segue destination="vbf-4U-xOy" kind="relationship" relationship="viewControllers" id="QRD-yO-rDK"/>
                     </connections>
                 </tabBarController>
