--- a/Obvious_or_not/loggedOut/Base.lproj/Main.storyboard
+++ b/Obvious_or_not/loggedOut/Base.lproj/Main.storyboard
@@ -11,20 +11,37 @@
     </dependencies>
     <scenes>
         <!--polls-->
+        <scene sceneID="Zjr-0C-sUa">
+            <objects>
+                <navigationController id="0MO-SM-3yJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="polls" id="GoG-2N-tOA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XNc-9X-CP3">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8qS-PI-EFh" kind="relationship" relationship="rootViewController" id="A8e-QV-ZQy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x2j-4G-qfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975" y="1394"/>
+        </scene>
+        <!--Logged Out View Controller-->
         <scene sceneID="86A-fg-owe">
             <objects>
-                <viewController id="8qS-PI-EFh" customClass="ViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8qS-PI-EFh" customClass="LoggedOutViewController" customModule="Obvious_or_not" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jn4-gs-Cxe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="jkN-ID-K9v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="polls" id="Z86-7Y-Ymk"/>
+                    <navigationItem key="navigationItem" id="fpu-95-nFK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k5l-Di-kTz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="978" y="1250"/>
+            <point key="canvasLocation" x="1839" y="1394"/>
         </scene>
         <!--register-->
         <scene sceneID="UdU-Yo-lzG">
@@ -53,7 +70,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="8qS-PI-EFh" kind="relationship" relationship="viewControllers" id="HiV-Ak-ZbX"/>
+                        <segue destination="0MO-SM-3yJ" kind="relationship" relationship="viewControllers" id="6b0-j1-HnG"/>
                         <segue destination="uUa-q3-gbr" kind="relationship" relationship="viewControllers" id="bvi-Nk-J9u"/>
                     </connections>
                 </tabBarController>
